bottom white space fixed

--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -10,52 +10,52 @@ $size: calc(var(--size) * var(--length));
   width: 90%;
   padding: 5%;
   gap: 100px;
+  overflow: hidden;
 }
 
 .score {
-  height: 200px;
+  height: 100px;
   width: 90%;
   border: 1px solid #fff;
 }
 
 .options-list-container {
-  width: calc(var(--size) * var(--length));
-  height: calc(var(--size) * var(--length));
+  height: 400px; //TODO: dinamico
+  width: 400px;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed;
 
   .options-list {
-      transform: rotate(45deg);
-      width: calc($size / 10);
-      height: calc($size / 10);
-  
+    transform: rotate(45deg);
+    width: 75%;
+    height: 75%;
+
     &__item {
-        position: absolute;
-        top: 0; 
-        left: 0;
-        width: 100%; 
-        height: 100%;
-        transform: rotate($degrees);
-  
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transform: rotate(calc(360deg / var(--length)));
+
       &::after {
         content: "";
         position: absolute;
         bottom: calc((var(--size) * -1));
         right: 0;
-        height: calc(var(--size) * 1.25); //TODO: dinamico
-        width: 20px; //TODO: dinamico
+        height: calc(var(--size) * 2); //TODO: dinamico
+        width: calc(var(--size)  * 0.1);
         transform: rotate(45deg);
         background: rgba(0, 0, 0, 0.2);
       }
   
       &__content {
           position: absolute;
-          top: calc(var(--size) * -1);
-          left: calc(var(--size) * -1);
-          width: var( --size);
-          height: var( --size);
+          top: calc(var(--size) / 2 * -1);
+          left: calc(var(--size) / 2 * -1);
+          width: var(--size);
+          height: var(--size);
       }
     }
   }
